# realtime-screen-vision

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: bar_reader.cpp
include/svc/: color_vision.h  input_controller.h  logger.h  timer.h  window_capture.h  window_finder.h
scripts/: fetch-deps.ps1
src/: color_vision.cpp  input_controller.cpp  logger.cpp  timer.cpp  window_capture.cpp  window_finder.cpp
